kustomize/apps/datastore/base/datastore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datastore
  labels:
    app: datastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datastore
  template:
    metadata:
      labels:
        app: datastore
    spec:
      imagePullSecrets:
      - name: ghcr-ro-secret
      containers:
        - name: datastore
          image: ghcr.io/noaa-pmel/msp/datastore:2.13.0
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
          # Standard Kubernetes Probes
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 30
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 15
            timeoutSeconds: 5
