kustomize/apps/datastore/base/datastore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datastore
  labels:
    app: datastore
spec:
  selector:
    app: datastore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
